2003-06-06  Pavel Roskin  <proski@gnu.org>

	* view.c (get_byte): Fix off-by-one error.  Found by Valgrind.

	* command.c (command_new): Fix memory leak.
	* subshell.c (exit_subshell): Free pty_buffer.

2003-06-05  Pavel Roskin  <proski@gnu.org>

	* dir.c (do_load_dir): Add new argument "path" to avoid the need
	to request the current directory.
	(do_reload_dir): Likewise.  Adjust all callers.

	* screen.c (panel_destroy): Rewind history to the beginning
	before freeing it.
	* widget.c (input_destroy): Likewise.
	* util.c (list_append_unique): Free data when removing duplicate
	list entries.

2003-05-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* key.c (init_key): Fix crash if TERM is unset.

2003-05-29  Koblinger Egmont  <egmont@uhulinux.hu>

	* ext.c (regex_check_type): Recognize and skip "/dev/stdin:"
	that can appear in the output of new versions of file.

	* util.c (unix_error_string): Convert error string from UTF-8 if
	glib 2 is used.

	* text.c (default_edition_colors): Change the default for
	dhotfocus to be blue on cyan for consistency with dhotnormal.

2003-05-27  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* info.c (info_show_info): Cast myfs_stats.avail to double to
	fix integer overflow that can cause a negative percent number.

2003-05-05  Jindrich Makovicka  <makovick@kmlinux.fjfi.cvut.cz>

	* main.c (directory_history_add): Don't change the directory
	passed as the argument, work on a copy.

2003-04-16  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* find.c (get_line_at): Strip trailing newline to fix $
	matching.

2003-03-26  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* file.c (copy_file_file): Fix data corruption if mc_write()
	does not write n_read bytes at once.
	(move_file_file): Eliminate retry_src_lstat label.

2003-03-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* view.c (get_line_at): Set prev properly for reverse search.
	Don't remove final character in the last line without newline.
	(search): During regexp search: handle properly '^'